# nekos

./: .gitignore  Makefile  README.md
kernel/: Cargo.toml  build.rs  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: config.rs  lib.rs  prelude.rs
kernel/src/arch/: mod.rs
kernel/src/arch/common/: backtrace.rs  mod.rs
kernel/src/arch/riscv64/: abi.rs  backtrace.rs  consts.rs  cpu.rs  hardware.rs  linker.ld  macros.rs  memory.rs  mod.rs  power.rs  stdout.rs  time.rs  tls.rs
kernel/src/base/: cell.rs  either.rs  error.rs  future.rs  mod.rs  thread.rs
kernel/src/common/: backtrace.rs  basic.rs  inherit.rs  logging.rs  mod.rs  vdisk.rs
kernel/src/drivers/: defines.rs  manager.rs  mod.rs  virtio_blk.rs
kernel/src/drivers/virtio/: mmio.rs  mod.rs  queue.rs
kernel/src/fs/: memfs.rs  mod.rs
kernel/src/mem/: defines.rs  dma.rs  heap.rs  mod.rs  tls.rs  utils.rs  vmm.rs
kernel/src/mem/frames/: buddy.rs  errors.rs  line_box.rs  mod.rs  phys_box.rs  points_box.rs
kernel/src/mem/pages/: buddy.rs  errors.rs  mod.rs
kernel/src/mem/vmm/: errors.rs  karea.rs  kmap.rs  kspace.rs  mod.rs
kernel/src/platform/: mod.rs
kernel/src/platform/riscv64/: backtrace.rs  config.rs  linker.ld  mod.rs  paging.rs  rt.rs  sbi.rs  startup.asm  startup.rs  sv39.asm  time.rs  trap.asm  trap.rs
kernel/src/proc/: defines.rs  handle_set.rs  loader.rs  mod.rs  process.rs  signal_set.rs  thread.rs
kernel/src/proc/loader/: errors.rs  mod.rs
kernel/src/proc/process/: errors.rs  (+2 more)
kernel/src/rt/: backtrace.rs  io.rs  log.rs  macros.rs  mem.rs  mod.rs  paging.rs  platform.rs  process.rs  thread.rs  time.rs  trap.rs
kernel/src/rust/: alloc.rs  main.rs  mod.rs  panic.rs  tests.rs
kernel/src/sched/: defines.rs  mod.rs  scheduler.rs
kernel/src/user/: codomain.rs  defines.rs  domain.rs  mod.rs
(+62 files in other folders)
