[package]
name = "kernel"
version = "0.1.0"
authors = ["Usamoi Minakami <usamoi@outlook.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "main"
path = "src/rust/main.rs"

[dependencies]
array-init = { version = "2.0.0" }
arrayvec = { version = "0.7.2", default-features = false }
async-trait = { version = "0.1.52" }
cfg-if = { version = "1.0.0" }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
derive_more = { version = "0.99.17" }
fdt = { version = "0.1.3" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = { version = "0.4.14" }
nekos-heap = { path = "../crates/nekos-heap" }
num_enum = { version = "0.5.6", default-features = false }
owo-colors = { version = "3.2.0" }
spin = { version = "0.9.2" }
static_assertions = { version = "1.1.0" }
volatile = { version = "0.3.0" }
zelf = { version = "0.1.0" }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.7.0" }
