[package]
name = "kernel"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "main"
path = "src/rust/main.rs"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
crossbeam = { version = "0.8.1", default-features = false, features = ["alloc"] }
fdt = "0.1.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
linked_list_allocator = "0.9.1"
log = "0.4.16"
owo-colors = "3.3.0"
spin = "0.9.2"
zelf = "0.1.0"
# macros
async-trait = "0.1.52"
cfg-if = "1.0.0"
derive_more = "0.99.17"
num_enum = { version = "0.5.7", default-features = false }
static_assertions = "1.1.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.7.0"
